# fast_slide

./: README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  qieman.json  qieman.py
front/: package-lock.json  package.json
front/src/components/: Slide.astro  Welcome.astro
front/src/layouts/: RevealLayout.astro
front/src/pages/: qieman.astro
